--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,10 +21,10 @@ body {
 
 #chatBox {
   display: flex;
-  width: 50vw;
+  width: 100%;
   height: 100vh;
   justify-content: flex-start;
-  align-items: flex-end;
+  flex-direction: column-reverse;
   background-color: aquamarine;
 }
 
@@ -39,6 +39,8 @@ body {
   display: flex;
   width: 100%;
   justify-content: center;
+}
+
 #gamePage {
   display: flex;
   flex-direction: row;
