--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  background-color: pink;
+  background-color: rgb(142, 89, 98);
   display: flex;
   justify-content: center;
 }
